# android10_r41-device-Jelly-Rice14

./: .gitignore  AndroidProducts.mk  BoardConfig.mk  CMakeLists.txt  README.md  Rice14.mk
AIDLCppCallbackDemo/: Android.bp  CMakeLists.txt  HelloClient.cpp  HelloServer.cpp  ICallback.cpp  IHello.cpp  aidl.sh
AIDLCppCallbackDemo/com/zyp/: BnCallback.h  BpCallback.h  BpHello.h  ICallback.aidl  ICallback.h  IHello.aidl  IHello.h
AIDLCppDemo/: CMakeLists.txt  HelloClient.cpp  HelloServer.cpp
AIDLCppDemo/com/zyp/: BnHello.h
AsSystemApp/: Android.mk
BinderCDemo/: CMakeLists.txt  README.md  binder.h
BinderCppDemo/: Android.bp  BinderClient.cpp  BinderServer.cpp  BpHelloService.cpp  CMakeLists.txt  IHelloService.h  README.md
BinderCppDemo/test/: thread_specific_data_test.cpp
FirstSystemAndroidLibrary/: Android.bp  AndroidManifest.xml
FirstSystemAndroidLibrary/src/com/zyp/firstsystemandroidlibrary/: MyCustomView.kt
FirstSystemApp/: Android.bp  AndroidManifest.xml
FirstSystemApp/res/values/: strings.xml  themes.xml
FirstSystemApp/res/values-night/: themes.xml
FirstSystemApp/src/com/zyp/firstsystemapp/: MainActivity.kt
HelloDriver/: .hello_drv.ko.cmd  .hello_drv.mod.o.cmd  .hello_drv.o.cmd  CMakeLists.txt  Makefile  README.md  build_driver.sh  build_driver_test.sh  hello_drv.c  hello_drv.ko  hello_drv.mod.c  hello_drv_test.c  modules.order
HelloNativeService/: Android.bp  CMakeLists.txt  HelloClient.cpp  HelloServer.cpp  IHello.cpp  aidl-cpp-gen.sh
HelloNativeService/com/zyp/: BpHello.h  IHello.aidl  IHello.h
JNIApp/: Android.mk  AndroidManifest.xml
JNIApp/jni/: Android.mk  native.cpp
JNIApp/src/com/example/android/simplejni/: SimpleJNI.java
hello/: Android.bp  hello.cpp
hello_seandroid/: Android.bp  hello_seandroid.c
hellojava/: Android.bp
hellojava/com/zyp/main/: HelloJava.java
hellojavajar/: Android.bp
initscript/: Android.bp  initscript.rc  initscript.sh
liblottie/: Android.bp  lottie-5.2.0.aar
libmymath/: Android.bp  my_math.cpp  my_math.h
libmymathjava/: Android.bp
libmymathjava/com/zyp/mymath/: MyMath.java
libmymathjavajar/: Android.bp
libmymathprebuild/: Android.bp
prebuilt/busybox/: Android.bp
sepolicy/: device.te  file_contexts  hello_hidl.te  hello_se.te  hwdevice.te  hwservice_contexts  initscript.te
